--- a/client/src/sass/04-components/Header.scss
+++ b/client/src/sass/04-components/Header.scss
@@ -2,10 +2,12 @@
   &--container {
     display: flex;
 
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-
     justify-content: center;
     text-align: center;
+
+    @include md {
+      grid-column: 1 / 3;
+      grid-row: 1 / 2;
+    }
   }
 }
